# AWS-AI-Generative

./: .env  .gitignore  README.md  pyproject.toml
aws-ai-generative/: README.md
aws-ai-generative/docs/: README.md  best-practices.md  getting-started.md
aws-ai-generative/examples/chatbot/: README.md  app.py  config.json
aws-ai-generative/examples/rag/: README.md  ingest.py  query.py
aws-ai-generative/examples/rag/data/: sample.txt
aws-ai-generative/notebooks/: 01_bedrock_text_generation.ipynb  02_bedrock_chatbot.ipynb  README.md
aws-ai-generative/prompts/: README.md  chatbot.txt  rag.txt  summarization.txt
aws-ai-generative/scripts/: README.md  check_bedrock_access.py  setup_env.sh
aws_ai_generative.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
chatbot/: app.py
docs/: getting-started.md
examples/chatbot/: README.md  config.json
examples/rag/: README.md  config.json  ingest.py  query.py
examples/rag/data/: sample.txt
notebooks/: 01_bedrock_text_generation.ipynb  02_bedrock_chatbot.ipynb  README.md
prompts/: README.md  chatbot.txt  rag.txt  summarization.txt
scripts/: README.md  check_bedrock_access.py  setup_env.sh
scripts/docs/: README.md  best-practices.md
