[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[project]
name = "aws-ai-generative"
version = "0.1.0"
description = "Simple and practical examples of Generative AI on AWS using Amazon Bedrock"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.34",
]

[project.optional-dependencies]
notebooks = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
]
dev = [
    "ruff>=0.4",
]

[tool.ruff]
line-length = 88
target-version = "py310"
